name:                selenese-intern
version:             0.1.0.0
synopsis:            Generates Intern-compatible tests using the haskell-selenese parser.
description:         Please see README.md
homepage:            https://github.com/beerendlauwers/haskell-selenese-intern/blob/master/README.md
license:             BSD3
license-file:        LICENSE
author:              Beerend Lauwers
maintainer:          beerendlauwers@gmail.com
copyright:           2016 Beerend Lauwers
category:            Web, Browser, Testing, WebDriver, Selenium
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Test.WebDriver.InternFormatter
  build-depends:       base >= 4.7 && < 5
                      , selenese
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/beerendlauwers/haskell-selenese-intern
